--- a/Day3/Registration Form/style.css
+++ b/Day3/Registration Form/style.css
@@ -3,9 +3,61 @@ body{
     height: 100vh;
     margin: 0;
     background-color: #1b1b32;
-    color: #f5f6f7
+    color: #f5f6f7;
+    font-family: Tahoma;
+    font-size: 16px;
+}
+a{
+    color: #dfdfe2;
 }
 label{
     display:block;
     margin: 0.5rem 0;
 }
+h1,p{
+    margin: 1em 0;
+    text-align: center;
+}
+form{
+    width: 80vw;
+    max-width: 500px;
+    min-width: 300px;
+    margin: 0 auto;
+    padding-bottom: 2em;
+}
+fieldset{
+    border: none;
+    padding: 2rem 0;
+}
+fieldset:not(:last-of-type){
+    border-bottom: 3px solid #3b3b4f;
+}
+input, select, textarea{
+    width: 100%;
+    margin: 10px 0 0 0 ;
+    min-height: 2em;
+}
+.inline{
+    width:unset;
+    margin: 0 0.5rem 0 0 ;
+    vertical-align: middle;
+}
+input,textarea{
+    background-color: #0a0a23;
+    border: 1px solid #0a0a23;
+    color: #fff;
+}
+input[type="submit"] {
+    display: block;
+    width: 60%;
+    min-width: 300px;
+    margin: 1em auto;
+    height: 2em;
+    font-size: 1.1rem;
+    background-color: #3b3b4f;
+    border-color: white;
+    cursor:pointer;
+  }
+  input[type="file"]{
+    padding: 1px 2px;
+  }
